Fix HTML structure and update section titles

--- a/skills.html
+++ b/skills.html
@@ -37,7 +37,7 @@
 
     <!-- Skills Section -->
     <section id="skills" style="padding-top: 120px;">
-        <h2 class="section-title"><span>Technical Arsenal</span></h2>
+        <h2 class="section-title"><span>Technical Skills</span></h2>
         <div class="grid-container">
             <div class="info-block">
                 <div class="block-image">
@@ -90,5 +90,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
