Fix typos and improve HTML structure in skills.html
Corrected typos in the footer and ensured proper HTML structure.

--- a/skills.html
+++ b/skills.html
@@ -84,7 +84,7 @@
     </section>
 
     <footer>
-        <p>&copy;Built and Desing by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a>
+        <p>&copy;Built and Designed by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a>
         </p>
     </footer>
 
@@ -93,3 +93,4 @@
 
 
 </html>
+
