--- a/certification.html
+++ b/certification.html
@@ -201,11 +201,12 @@
     </section>
 
     <footer>
-        <p>&copy;Built and Desing by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a>
+        <p>&copy;Built and Designed by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a>
         </p>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
