Fix HTML encoding issues in certification.html

--- a/certification.html
+++ b/certification.html
@@ -177,7 +177,7 @@
                     <span class="skill-tag">Machine Learning</span> 
                 </div>
                 <div class="project-links">
-                    <a href="https://www.linkedin.com/posts/karanxprajapatix1_certificate-of-internship-activity-7316116987288424448-0_4a?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD-6e5gB3l21ygDn1yujDgw-mhN2EU61Acc"></i> View Credential</a>
+                    <a href="https://www.linkedin.com/posts/karanxprajapatix1_certificate-of-internship-activity-7316116987288424448-0_4a?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD-6e5gB3l21ygDn1yujDgw-mhN2EU61Acc"><i class="fas fa-certificate"></i> View Credential</a>
                 </div>
             </div>
 
@@ -210,3 +210,4 @@
 
 
 </html>
+
