Fix HTML formatting and add missing newline

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
     </section>
 
     <footer>
-        <p>&copy;Built and Desing by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a></p>
+        <p>&copy;Built and Designed by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a></p>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
