Revise project section and content
Updated project details and fixed minor typos.

--- a/projects.html
+++ b/projects.html
@@ -48,9 +48,8 @@
                     <img src="https://images.pexels.com/photos/159888/pexels-photo-159888.jpeg"
                         alt="Stock Trend Predictor Interface">
                 </div>
-                <h3>Stock Trend Predictor</h3>
-                <p>An LSTM-based recurrent neural network that predicts stock market trends with 85% accuracy on
-                    historical test data.</p>
+                <h3>Adding Soon!</h3>
+                <p>Time nahi mila yrr. upload karne ke liye.</p>
                 <div class="skill-tags">
                     <span class="skill-tag">Python</span>
                     <span class="skill-tag">Keras</span>
@@ -71,11 +70,12 @@
     </section>
 
     <footer>
-        <p>&copy;Built and Desing by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a>
+        <p>&copy;Built and Designed by <a href="https://sites.google.com/view/thevisarggalaxy/home">TheVisargGalaxy</a>
         </p>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
