--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <br> Drop any message or suggestion at any time in my mail.</p>
 
                 <div class="social-links">
-                    <a href="www.linkedin.com/in/karanxprajapatix1" class="social-btn"><i
+                    <a href="www.linkedin.com/karanxprajapatix1" class="social-btn"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/KaranXNandkishore01" class="social-btn"><i
                             class="fab fa-github"></i></a>
