Fix HTML encoding issues in contact.html
corrected urls

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                 </p>
 
                 <div class="social-links">
-                    <a href="https://linkedin.com/karanxprajapatix1" class="social-btn"><i
+                    <a href="https://www.linkedin.com/in/karanxprajapatix1/" class="social-btn"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/KaranXNandkishore01" class="social-btn"><i
                             class="fab fa-github"></i></a>
@@ -106,4 +106,5 @@
 
 
 </html>
+
 
