--- a/certification.html
+++ b/certification.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certifications - K.Prajapati.</title>
-   
+   <link rel="icon" type="image/x-icon" href="light_icn.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
@@ -211,6 +211,7 @@
 
 
 </html>
+
 
 
 
